[gd_scene load_steps=3 format=3 uid="uid://dxxx"]

[ext_resource type="Script" path="res://Resources/CrewAndCharacters/CharacterSheet.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://d1you1rrwuu48" path="res://Scenes/sci_fi_theme.tres" id="2_theme"]

[node name="CharacterSheet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Character Name"
horizontal_alignment = 1

[node name="StatsDisplay" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="TraitsDisplay" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Traits: "

[node name="EquipmentList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
auto_height = true

[node name="SkillsDisplay" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Skills: "

[node name="PsionicPowersDisplay" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Psionic Powers: "

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
